--- a/mgussegdlet/app/src/main/assets/index.html
+++ b/mgussegdlet/app/src/main/assets/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <script>
-    window.confirm("Üdvözöllek a M.A.G.U.S. alkalmazásban. A karaktergenerálás folyamata: 1: Faj kiválasztása, 2: Kaszt kiválasztása, 3: Ha a karaktered vallásos, vagy Pap esetleg Paplovag kasztú, akkor kötelező választanod, 4: Értékek kidobása, 5: Számolj! gomb.")
+   /* window.confirm("Üdvözöllek a M.A.G.U.S. alkalmazásban. A karaktergenerálás folyamata: 1: Faj kiválasztása, 2: Kaszt kiválasztása, 3: Ha a karaktered vallásos, vagy Pap esetleg Paplovag kasztú, akkor kötelező választanod, 4: Értékek kidobása, 5: Számolj! gomb.")
 </script>
 
 <body>
@@ -673,6 +673,97 @@
                 <td>
                     <output id="kepzettseg3fok"></output>
                 </td>
+
+                <td style="width: 60%;">
+                    <select name="" id="fegyver3"
+                        style="width: 100%; font-size: 10px; background-color: lightseagreen; border-radius: 3px;"
+                        onchange="fegyver3()">
+                        <option value="valassz">Fegyver 3</option> <!-- szúró-vágó fegyverek!-->
+                        <option value="shadlekibuzogany">Shadleki buzogány</option>
+                        <option value="egykezescsatabard">Egykezes csatabárd</option>
+                        <option value="ketkezescsatabard">Kétkezes csatabárd</option>
+                        <option value="csatacsakany">Csatacsákány</option>
+                        <option value="hajitobard">Hajítóbárd</option>
+                        <option value="rovidkard">Rövidkard</option>
+                        <option value="hosszukard">Hosszú kard</option>
+                        <option value="masfelkezeskard">Másfélkezes kard</option>
+                        <option value="lovagikard">Lovagikard</option>
+                        <option value="pallos">Pallos</option>
+                        <option value="szablya">Szablya</option>
+                        <option value="dzsennszablya">Dzsenn szablya</option>
+                        <option value="jatagan">Jatagán</option>
+                        <option value="handzsar">Handzsár</option>
+                        <option value="fevadaszkard">Fejvadász kard</option>
+                        <option value="slankard">Slan kard</option>
+                        <option value="kigyokard">Egykezes csatabárd</option>
+                        <option value="kes">Kés</option>
+                        <option value="marasequor">Mara-Sequor</option>
+                        <option value="ramiera">Ramiera</option>
+                        <option value="sequor">Sequor</option>
+                        <option value="slancsillag">Slan csillag</option>
+                        <option value="tor">Tőr</option>
+                        <option value="dobotor">Dobótőr</option>
+                        <option value="slantor">Slan tőr</option>
+                        <option value="torkard">Tőrkard</option>
+
+                        <option value="hosszubot">Hosszú bot</option> <!-- zúzófegyverek! -->
+                        <option value="rovidbot">Rövid bot</option>
+                        <option value="furkosbot">Furkósbot</option>
+                        <option value="egykezesbuzogany">Egykezes buzogány</option>
+                        <option value="ketkezesbuzogany">Kétkezes buzogány</option>
+                        <option value="tuskesbuzogany">Tüskés buzogány</option>
+                        <option value="tollasbuzogany">Tollas buzogány</option>
+                        <option value="lancosbuzogany">Láncos buzogány</option>
+                        <option value="csephadaro">Cséphadaró</option>
+                        <option value="harcikalapacs">Harci kalapács</option>
+
+                        <option value="alabard">Alabárd</option> <!-- szálfegyverek! -->
+                        <option value="darda">Dárda/ Hajító dárda</option>
+                        <option value="konnyukopja">Könnyű kopja</option>
+                        <option value="lovaskopja">Lovas kopja</option>
+                        <option value="nehézlovaskopja">Nehézlovas kopja</option>
+                        <option value="landzsa">Lándzsa</option>
+                        <option value="szigony">Szigony</option>
+
+                        <option value="fuvocso">Fúvócső</option>
+                        <!--célzófegyverek! -->
+                        <option value="rovidij">Rövid íj</option>
+                        <option value="hosszuij">Hosszú íj</option>
+                        <option value="visszacsapoij">Visszacsapó íj</option>
+                        <option value="elfij">Elf íj</option>
+                        <option value="aquirnyilpuska">Aquir nyílpuska</option>
+                        <option value="kezinyilpuska">Kézi nyílpuska</option>
+                        <option value="kahreinyilpuska">Kahrei nyílpuska</option>
+                        <option value="konnyunyilpuska">Könnyű nyílpuska</option>
+                        <option value="neheznyilpuska">Nehéz nyílpuska</option>
+                        <option value="shadonipanceltoro">Shadoni páncéltörő</option>
+                        <option value="parittya">Parittya</option>
+
+
+                        <option value="bola">Bola</option> <!-- egyéb fegyverek!-->
+                        <option value="dobohalo">Dobóháló</option>
+                        <option value="garott">Garott</option>
+                        <option value="haritotor">Hárítótőr</option>
+                        <option value="korbacs">Korbács</option>
+                        <option value="lasszo">Lasszó</option>
+                        <option value="ostor">Ostor</option>
+                        <option value="okol">Puszta kéz</option>
+                        <option value="vasokol">Vasököl</option>
+
+                        <option value="kispajzs">Kis pajzs</option> <!-- pajzsok! -->
+                        <option value="kozepespajzs">Közepes pajzs</option>
+                        <option value="nagypajzs">Nagy pajzs</option>
+                    </select>
+
+                    <label for="">Ké:</label> <output id="fegyver1ke"></output>
+                    <label for="">Té:</label> <output id="fegyver1te"></output>
+                    <label for="">Vé:</label> <output id="fegyver1ve"></output>
+                    <label for="">Cé:</label> <output id="fegyver1ce"></output>
+                    <label for="">Sebzés:</label> <output id="fegyver1sebzes"></output>
+                    <label for="">Tám/k:</label> <output id="fegyver1tam"></output>             
+                    <input type="checkbox" onchange="fegyverrel3()">      
+                </td>
+
             </tr>
 
             <tr style="background-color: lightgrey;">
@@ -683,6 +774,97 @@
                 <td>
                     <output id="kepzettseg4fok"></output>
                 </td>
+
+                <td style="width: 60%;">
+                    <select name="" id="fegyver4"
+                        style="width: 100%; font-size: 10px; background-color: lightgoldenrodyellow; border-radius: 3px;"
+                        onchange="fegyver4()">
+                        <option value="valassz">Fegyver 4</option> <!-- szúró-vágó fegyverek!-->
+                        <option value="shadlekibuzogany">Shadleki buzogány</option>
+                        <option value="egykezescsatabard">Egykezes csatabárd</option>
+                        <option value="ketkezescsatabard">Kétkezes csatabárd</option>
+                        <option value="csatacsakany">Csatacsákány</option>
+                        <option value="hajitobard">Hajítóbárd</option>
+                        <option value="rovidkard">Rövidkard</option>
+                        <option value="hosszukard">Hosszú kard</option>
+                        <option value="masfelkezeskard">Másfélkezes kard</option>
+                        <option value="lovagikard">Lovagikard</option>
+                        <option value="pallos">Pallos</option>
+                        <option value="szablya">Szablya</option>
+                        <option value="dzsennszablya">Dzsenn szablya</option>
+                        <option value="jatagan">Jatagán</option>
+                        <option value="handzsar">Handzsár</option>
+                        <option value="fevadaszkard">Fejvadász kard</option>
+                        <option value="slankard">Slan kard</option>
+                        <option value="kigyokard">Egykezes csatabárd</option>
+                        <option value="kes">Kés</option>
+                        <option value="marasequor">Mara-Sequor</option>
+                        <option value="ramiera">Ramiera</option>
+                        <option value="sequor">Sequor</option>
+                        <option value="slancsillag">Slan csillag</option>
+                        <option value="tor">Tőr</option>
+                        <option value="dobotor">Dobótőr</option>
+                        <option value="slantor">Slan tőr</option>
+                        <option value="torkard">Tőrkard</option>
+
+                        <option value="hosszubot">Hosszú bot</option> <!-- zúzófegyverek! -->
+                        <option value="rovidbot">Rövid bot</option>
+                        <option value="furkosbot">Furkósbot</option>
+                        <option value="egykezesbuzogany">Egykezes buzogány</option>
+                        <option value="ketkezesbuzogany">Kétkezes buzogány</option>
+                        <option value="tuskesbuzogany">Tüskés buzogány</option>
+                        <option value="tollasbuzogany">Tollas buzogány</option>
+                        <option value="lancosbuzogany">Láncos buzogány</option>
+                        <option value="csephadaro">Cséphadaró</option>
+                        <option value="harcikalapacs">Harci kalapács</option>
+
+                        <option value="alabard">Alabárd</option> <!-- szálfegyverek! -->
+                        <option value="darda">Dárda/ Hajító dárda</option>
+                        <option value="konnyukopja">Könnyű kopja</option>
+                        <option value="lovaskopja">Lovas kopja</option>
+                        <option value="nehézlovaskopja">Nehézlovas kopja</option>
+                        <option value="landzsa">Lándzsa</option>
+                        <option value="szigony">Szigony</option>
+
+                        <option value="fuvocso">Fúvócső</option>
+                        <!--célzófegyverek! -->
+                        <option value="rovidij">Rövid íj</option>
+                        <option value="hosszuij">Hosszú íj</option>
+                        <option value="visszacsapoij">Visszacsapó íj</option>
+                        <option value="elfij">Elf íj</option>
+                        <option value="aquirnyilpuska">Aquir nyílpuska</option>
+                        <option value="kezinyilpuska">Kézi nyílpuska</option>
+                        <option value="kahreinyilpuska">Kahrei nyílpuska</option>
+                        <option value="konnyunyilpuska">Könnyű nyílpuska</option>
+                        <option value="neheznyilpuska">Nehéz nyílpuska</option>
+                        <option value="shadonipanceltoro">Shadoni páncéltörő</option>
+                        <option value="parittya">Parittya</option>
+
+
+                        <option value="bola">Bola</option> <!-- egyéb fegyverek!-->
+                        <option value="dobohalo">Dobóháló</option>
+                        <option value="garott">Garott</option>
+                        <option value="haritotor">Hárítótőr</option>
+                        <option value="korbacs">Korbács</option>
+                        <option value="lasszo">Lasszó</option>
+                        <option value="ostor">Ostor</option>
+                        <option value="okol">Puszta kéz</option>
+                        <option value="vasokol">Vasököl</option>
+
+                        <option value="kispajzs">Kis pajzs</option> <!-- pajzsok! -->
+                        <option value="kozepespajzs">Közepes pajzs</option>
+                        <option value="nagypajzs">Nagy pajzs</option>
+                    </select>
+
+                    <label for="">Ké:</label> <output id="fegyver1ke"></output>
+                    <label for="">Té:</label> <output id="fegyver1te"></output>
+                    <label for="">Vé:</label> <output id="fegyver1ve"></output>
+                    <label for="">Cé:</label> <output id="fegyver1ce"></output>
+                    <label for="">Sebzés:</label> <output id="fegyver1sebzes"></output>
+                    <label for="">Tám/k:</label> <output id="fegyver1tam"></output>             
+                    <input type="checkbox" onchange="fegyverrel4()">      
+                </td>
+
             </tr>
 
             <tr style="background-color: lightyellow;">
