harmadik fegyversáv oké, meg egy halom hiba is javítva

--- a/mgussegdlet/app/src/main/assets/index.html
+++ b/mgussegdlet/app/src/main/assets/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <script>
-   /* window.confirm("Üdvözöllek a M.A.G.U.S. alkalmazásban. A karaktergenerálás folyamata: 1: Faj kiválasztása, 2: Kaszt kiválasztása, 3: Ha a karaktered vallásos, vagy Pap esetleg Paplovag kasztú, akkor kötelező választanod, 4: Értékek kidobása, 5: Számolj! gomb.")
+   /* window.confirm("Üdvözöllek a M.A.G.U.S. alkalmazásban. A karaktergenerálás folyamata: 1: Faj kiválasztása, 2: Kaszt kiválasztása, 3: Ha a karaktered vallásos, vagy Pap esetleg Paplovag kasztú, akkor kötelező választanod, 4: Értékek kidobása, 5: Számolj! gomb.") */
 </script>
 
 <body>
@@ -755,12 +755,12 @@
                         <option value="nagypajzs">Nagy pajzs</option>
                     </select>
 
-                    <label for="">Ké:</label> <output id="fegyver1ke"></output>
-                    <label for="">Té:</label> <output id="fegyver1te"></output>
-                    <label for="">Vé:</label> <output id="fegyver1ve"></output>
-                    <label for="">Cé:</label> <output id="fegyver1ce"></output>
-                    <label for="">Sebzés:</label> <output id="fegyver1sebzes"></output>
-                    <label for="">Tám/k:</label> <output id="fegyver1tam"></output>             
+                    <label for="">Ké:</label> <output id="fegyver3ke"></output>
+                    <label for="">Té:</label> <output id="fegyver3te"></output>
+                    <label for="">Vé:</label> <output id="fegyver3ve"></output>
+                    <label for="">Cé:</label> <output id="fegyver3ce"></output>
+                    <label for="">Sebzés:</label> <output id="fegyver3sebzes"></output>
+                    <label for="">Tám/k:</label> <output id="fegyver3tam"></output>             
                     <input type="checkbox" onchange="fegyverrel3()">      
                 </td>
 
