teljes harciérték számoló kész

--- a/mgussegdlet/app/src/main/assets/index.html
+++ b/mgussegdlet/app/src/main/assets/index.html
@@ -558,15 +558,14 @@
                         <option value="nagypajzs">Nagy pajzs</option>
                     </select>
 
-                    <label for="">Ké:</label> <output id="fegyver1ke"></output>
-                    <label for="">Té:</label> <output id="fegyver1te"></output>
-                    <label for="">Vé:</label> <output id="fegyver1ve"></output>
-                    <label for="">Cé:</label> <output id="fegyver1ce"></output>
+                    <label for="">Ké:</label> <output id="fegyver1ke"></output> <output id="fullke1" style="background-color: lightcoral; font-size: 12px; padding: 2px; border-radius: 2px;"></output>
+                    <label for="">Té:</label> <output id="fegyver1te"></output> <output id="fullte1" style="background-color: lightcoral; font-size: 12px; padding: 2px; border-radius: 2px;"></output>
+                    <label for="">Vé:</label> <output id="fegyver1ve"></output> <output id="fullve1" style="background-color: lightcoral; font-size: 12px; padding: 2px; border-radius: 2px;"></output>
+                    <label for="">Cé:</label> <output id="fegyver1ce"></output> <output id="fullce1" style="background-color: lightcoral; font-size: 12px; padding: 2px; border-radius: 2px;"></output>
                     <label for="">Sebzés:</label> <output id="fegyver1sebzes"></output>
                     <label for="">Tám/k:</label> <output id="fegyver1tam"></output>
-                    <input type="checkbox" onchange="fegyverrel1()">
+                    <button onclick="fegyverrel1()" style="font-size: 10px; padding: 2px; background-color: red;">Full</button>
                 </td>
-
 
             </tr>
 
@@ -661,13 +660,13 @@
                         <option value="nagypajzs">Nagy pajzs</option>
                     </select>
 
-                    <label for="">Ké:</label> <output id="fegyver2ke"></output>
-                    <label for="">Té:</label> <output id="fegyver2te"></output>
-                    <label for="">Vé:</label> <output id="fegyver2ve"></output>
-                    <label for="">Cé:</label> <output id="fegyver2ce"></output>
+                    <label for="">Ké:</label> <output id="fegyver2ke"></output> <output id="fullke2" style="background-color: lightcoral; font-size: 12px; padding: 2px; border-radius: 2px;"></output>
+                    <label for="">Té:</label> <output id="fegyver2te"></output> <output id="fullke2" style="background-color: lightcoral; font-size: 12px; padding: 2px; border-radius: 2px;"></output>
+                    <label for="">Vé:</label> <output id="fegyver2ve"></output> <output id="fullke2" style="background-color: lightcoral; font-size: 12px; padding: 2px; border-radius: 2px;"></output>
+                    <label for="">Cé:</label> <output id="fegyver2ce"></output> <output id="fullke2" style="background-color: lightcoral; font-size: 12px; padding: 2px; border-radius: 2px;"></output>
                     <label for="">Sebzés:</label> <output id="fegyver2sebzes"></output>
                     <label for="">Tám/k:</label> <output id="fegyver2tam"></output>
-                    <input type="checkbox" onchange="fegyverrel2()">
+                    <button onclick="fegyverrel2()" style="font-size: 10px; padding: 2px; background-color: red;">Full</button>
                 </td>
             </tr>
 
@@ -761,13 +760,13 @@
                         <option value="nagypajzs">Nagy pajzs</option>
                     </select>
 
-                    <label for="">Ké:</label> <output id="fegyver3ke"></output>
+                    <label for="">Ké:</label> <output id="fegyver3ke"></output> 
                     <label for="">Té:</label> <output id="fegyver3te"></output>
                     <label for="">Vé:</label> <output id="fegyver3ve"></output>
                     <label for="">Cé:</label> <output id="fegyver3ce"></output>
                     <label for="">Sebzés:</label> <output id="fegyver3sebzes"></output>
                     <label for="">Tám/k:</label> <output id="fegyver3tam"></output>
-                    <input type="checkbox" onchange="fegyverrel3()">
+                    <button onclick="fegyverrel3()" style="font-size: 10px; padding: 2px; background-color: red;">Full</button>
                 </td>
 
             </tr>
@@ -867,7 +866,7 @@
                     <label for="">Cé:</label> <output id="fegyver4ce"></output>
                     <label for="">Sebzés:</label> <output id="fegyver4sebzes"></output>
                     <label for="">Tám/k:</label> <output id="fegyver4tam"></output>
-                    <input type="checkbox" onchange="fegyverrel4()">
+                    <button onclick="fegyverrel4()" style="font-size: 10px; padding: 2px; background-color: red;">Full</button>
                 </td>
 
             </tr>
