--- a/mgussegdlet/app/src/main/assets/index.html
+++ b/mgussegdlet/app/src/main/assets/index.html
@@ -564,7 +564,6 @@
                     <label for="">Cé:</label> <output id="fegyver1ce"></output> <output id="fullce1" style="background-color: lightcoral; font-size: 12px; padding: 2px; border-radius: 2px;"></output>
                     <label for="">Sebzés:</label> <output id="fegyver1sebzes"></output>
                     <label for="">Tám/k:</label> <output id="fegyver1tam"></output>
-                    <button onclick="fegyverrel1()" style="font-size: 10px; padding: 2px; background-color: red;">Full</button>
                 </td>
 
             </tr>
@@ -661,12 +660,11 @@
                     </select>
 
                     <label for="">Ké:</label> <output id="fegyver2ke"></output> <output id="fullke2" style="background-color: lightcoral; font-size: 12px; padding: 2px; border-radius: 2px;"></output>
-                    <label for="">Té:</label> <output id="fegyver2te"></output> <output id="fullke2" style="background-color: lightcoral; font-size: 12px; padding: 2px; border-radius: 2px;"></output>
-                    <label for="">Vé:</label> <output id="fegyver2ve"></output> <output id="fullke2" style="background-color: lightcoral; font-size: 12px; padding: 2px; border-radius: 2px;"></output>
-                    <label for="">Cé:</label> <output id="fegyver2ce"></output> <output id="fullke2" style="background-color: lightcoral; font-size: 12px; padding: 2px; border-radius: 2px;"></output>
+                    <label for="">Té:</label> <output id="fegyver2te"></output> <output id="fullte2" style="background-color: lightcoral; font-size: 12px; padding: 2px; border-radius: 2px;"></output>
+                    <label for="">Vé:</label> <output id="fegyver2ve"></output> <output id="fullve2" style="background-color: lightcoral; font-size: 12px; padding: 2px; border-radius: 2px;"></output>
+                    <label for="">Cé:</label> <output id="fegyver2ce"></output> <output id="fullce2" style="background-color: lightcoral; font-size: 12px; padding: 2px; border-radius: 2px;"></output>
                     <label for="">Sebzés:</label> <output id="fegyver2sebzes"></output>
                     <label for="">Tám/k:</label> <output id="fegyver2tam"></output>
-                    <button onclick="fegyverrel2()" style="font-size: 10px; padding: 2px; background-color: red;">Full</button>
                 </td>
             </tr>
 
@@ -760,13 +758,12 @@
                         <option value="nagypajzs">Nagy pajzs</option>
                     </select>
 
-                    <label for="">Ké:</label> <output id="fegyver3ke"></output> 
-                    <label for="">Té:</label> <output id="fegyver3te"></output>
-                    <label for="">Vé:</label> <output id="fegyver3ve"></output>
-                    <label for="">Cé:</label> <output id="fegyver3ce"></output>
+                    <label for="">Ké:</label> <output id="fegyver3ke"></output> <output id="fullke3" style="background-color: lightcoral; font-size: 12px; padding: 2px; border-radius: 2px;"></output>
+                    <label for="">Té:</label> <output id="fegyver3te"></output> <output id="fullte3" style="background-color: lightcoral; font-size: 12px; padding: 2px; border-radius: 2px;"></output>
+                    <label for="">Vé:</label> <output id="fegyver3ve"></output> <output id="fullve3" style="background-color: lightcoral; font-size: 12px; padding: 2px; border-radius: 2px;"></output>
+                    <label for="">Cé:</label> <output id="fegyver3ce"></output> <output id="fullce3" style="background-color: lightcoral; font-size: 12px; padding: 2px; border-radius: 2px;"></output>
                     <label for="">Sebzés:</label> <output id="fegyver3sebzes"></output>
                     <label for="">Tám/k:</label> <output id="fegyver3tam"></output>
-                    <button onclick="fegyverrel3()" style="font-size: 10px; padding: 2px; background-color: red;">Full</button>
                 </td>
 
             </tr>
@@ -860,13 +857,12 @@
                         <option value="nagypajzs">Nagy pajzs</option>
                     </select>
 
-                    <label for="">Ké:</label> <output id="fegyver4ke"></output>
-                    <label for="">Té:</label> <output id="fegyver4te"></output>
-                    <label for="">Vé:</label> <output id="fegyver4ve"></output>
-                    <label for="">Cé:</label> <output id="fegyver4ce"></output>
+                    <label for="">Ké:</label> <output id="fegyver4ke"></output> <output id="fullke4" style="background-color: lightcoral; font-size: 12px; padding: 2px; border-radius: 2px;"></output>
+                    <label for="">Té:</label> <output id="fegyver4te"></output> <output id="fullte4" style="background-color: lightcoral; font-size: 12px; padding: 2px; border-radius: 2px;"></output>
+                    <label for="">Vé:</label> <output id="fegyver4ve"></output> <output id="fullve4" style="background-color: lightcoral; font-size: 12px; padding: 2px; border-radius: 2px;"></output>
+                    <label for="">Cé:</label> <output id="fegyver4ce"></output> <output id="fullce4" style="background-color: lightcoral; font-size: 12px; padding: 2px; border-radius: 2px;"></output>
                     <label for="">Sebzés:</label> <output id="fegyver4sebzes"></output>
                     <label for="">Tám/k:</label> <output id="fegyver4tam"></output>
-                    <button onclick="fegyverrel4()" style="font-size: 10px; padding: 2px; background-color: red;">Full</button>
                 </td>
 
             </tr>
@@ -878,6 +874,9 @@
                 <td>Fok: </td>
                 <td>
                     <output id="kepzettseg5fok"></output>
+                </td>
+                <td>
+                    <button style="width: 100%; background-color: lightsalmon; border-width: 1px; border-radius: 3px;" onclick="fegyverrel1()">Fegyveres harcérték számítása</button>
                 </td>
             </tr>
 
