--- a/mgussegdlet/app/src/main/assets/index.html
+++ b/mgussegdlet/app/src/main/assets/index.html
@@ -9,18 +9,15 @@
     <title>Mágus</title>
 </head>
 
-<script>
-    /* window.confirm("Üdvözöllek a M.A.G.U.S. alkalmazásban. A karaktergenerálás folyamata: 1: Faj kiválasztása, 2: Kaszt kiválasztása, 3: Ha a karaktered vallásos, vagy Pap esetleg Paplovag kasztú, akkor kötelező választanod, 4: Értékek kidobása, 5: Számolj! gomb.") */
-</script>
-
 <body>
 
     <table id="table1" width="100%">
         <tr>
             <td colspan="2">
                 <div id="divszalagcim" style="font-size: 12px; text-align: center;">
-                    <button onclick="location.href='index2.html';">Töredékek</button>
-                    <button onclick="location.href='index.html';">Karakterkészítő</button>
+                    <button onclick="location.href='index2.html';" style="background-color: white; border-width: 1px; border-radius: 3px; padding: 4px;">Töredékek</button>
+                    <button onclick="location.href='index.html';" style="background-color: white; border-width: 1px; border-radius: 3px; padding: 4px;">Karakterkészítő</button>
+                    <button onclick="ismerteto()" style="background-color: white; border-width: 1px; border-radius: 3px; padding: 4px;">Ismertető</button>
                 </div>
             </td>
         </tr>
