szintlépés front OK, felszerelésnek lista OK

--- a/mgussegdlet/app/src/main/assets/index.html
+++ b/mgussegdlet/app/src/main/assets/index.html
@@ -885,6 +885,9 @@
                 <td>
                     <output id="kepzettseg6fok"></output>
                 </td>
+                <td style="background-color: white; text-align:center; font-size: 12px;">
+                    <label for="">Felszerelés</label>
+                </td>
             </tr>
 
             <tr style="background-color: lightyellow;">
@@ -894,6 +897,9 @@
                 <td>Fok: </td>
                 <td>
                     <output id="kepzettseg7fok"></output>
+                </td>
+                <td rowspan="18">
+                    <input type="text" style="width: 97%; height: 260px">
                 </td>
             </tr>
 
@@ -1074,6 +1080,9 @@
                 <td>Fok: </td>
                 <td>
                     <output id="kepzettseg25fok"></output>
+                </td>
+                <td style="text-align: center; font-size: 12px; background-color: lightslategray;">
+                    <label for="">Szint:</label> <output id="szint"></output> <button onclick="szintplus()" style="border-width: 1px; border-radius: 3px;">+</button> <button onclick="szintminus()" style="border-width: 1px; border-radius: 3px;">-</button>
                 </td>
             </tr>
 
