--- a/mgussegdlet/app/src/main/assets/index.html
+++ b/mgussegdlet/app/src/main/assets/index.html
@@ -120,7 +120,7 @@
                     </td>
                     <td style="width: 3%;">
                         <div id="divek">
-                            <output type="number" id="ero"">0</output>
+                            <output type="number" id="ero">0</output>
                         </div>
                     </td>
 
@@ -898,8 +898,8 @@
                 <td>
                     <output id="kepzettseg7fok"></output>
                 </td>
-                <td rowspan="18">
-                    <input type="text" style="width: 97%; height: 260px">
+                <td>
+                    <input type="text" maxlength="28" style="width: 97%;">
                 </td>
             </tr>
 
@@ -911,6 +911,10 @@
                 <td>
                     <output id="kepzettseg8fok"></output>
                 </td>
+                <td>
+                    <input type="text" maxlength="28" style="width: 97%;">
+                </td>
+
             </tr>
 
             <tr style="background-color: lightyellow;">
@@ -921,6 +925,10 @@
                 <td>
                     <output id="kepzettseg9fok"></output>
                 </td>
+                <td>
+                    <input type="text" maxlength="28" style="width: 97%;">
+                </td>
+
             </tr>
 
             <tr style="background-color: lightgrey;">
@@ -931,6 +939,10 @@
                 <td>
                     <output id="kepzettseg10fok"></output>
                 </td>
+                <td>
+                    <input type="text" maxlength="28" style="width: 97%;">
+                </td>
+
             </tr>
 
             <tr style="background-color: lightyellow;">
@@ -941,6 +953,10 @@
                 <td>
                     <output id="kepzettseg11fok"></output>
                 </td>
+                <td>
+                    <input type="text" maxlength="28" style="width: 97%;">
+                </td>
+
             </tr>
 
             <tr style="background-color: lightgrey;">
@@ -951,6 +967,10 @@
                 <td>
                     <output id="kepzettseg12fok"></output>
                 </td>
+                <td>
+                    <input type="text" maxlength="28" style="width: 97%;">
+                </td>
+
             </tr>
 
             <tr style="background-color: lightyellow;">
@@ -961,6 +981,10 @@
                 <td>
                     <output id="kepzettseg13fok"></output>
                 </td>
+                <td>
+                    <input type="text" maxlength="28" style="width: 97%;">
+                </td>
+
             </tr>
 
             <tr style="background-color: lightgrey;">
@@ -971,6 +995,10 @@
                 <td>
                     <output id="kepzettseg14fok"></output>
                 </td>
+                <td>
+                    <input type="text" maxlength="28" style="width: 97%;">
+                </td>
+
             </tr>
 
             <tr style="background-color: lightyellow;">
@@ -981,6 +1009,10 @@
                 <td>
                     <output id="kepzettseg15fok"></output>
                 </td>
+                <td>
+                    <input type="text" maxlength="28" style="width: 97%;">
+                </td>
+
             </tr>
 
             <tr style="background-color: lightgrey;">
@@ -991,6 +1023,10 @@
                 <td>
                     <output id="kepzettseg16fok"></output>
                 </td>
+                <td>
+                    <input type="text" maxlength="28" style="width: 97%;">
+                </td>
+
             </tr>
 
             <tr style="background-color: lightyellow;">
@@ -1001,6 +1037,10 @@
                 <td>
                     <output id="kepzettseg17fok"></output>
                 </td>
+                <td>
+                    <input type="text" maxlength="28" style="width: 97%;">
+                </td>
+
             </tr>
 
             <tr style="background-color: lightgrey;">
@@ -1011,6 +1051,10 @@
                 <td>
                     <output id="kepzettseg18fok"></output>
                 </td>
+                <td>
+                    <input type="text" maxlength="28" style="width: 97%;">
+                </td>
+
             </tr>
 
             <tr style="background-color: lightyellow;">
@@ -1021,6 +1065,10 @@
                 <td>
                     <output id="kepzettseg19fok"></output>
                 </td>
+                <td>
+                    <input type="text" maxlength="28" style="width: 97%;">
+                </td>
+
             </tr>
 
             <tr style="background-color: lightgrey;">
@@ -1031,6 +1079,10 @@
                 <td>
                     <output id="kepzettseg20fok"></output>
                 </td>
+                <td>
+                    <input type="text" maxlength="28" style="width: 97%;">
+                </td>
+
             </tr>
 
             <tr style="background-color: lightyellow;">
@@ -1041,6 +1093,10 @@
                 <td>
                     <output id="kepzettseg21fok"></output>
                 </td>
+                <td>
+                    <input type="text" maxlength="28" style="width: 97%;">
+                </td>
+
             </tr>
 
             <tr style="background-color: lightgrey;">
@@ -1051,6 +1107,10 @@
                 <td>
                     <output id="kepzettseg22fok"></output>
                 </td>
+                <td>
+                    <input type="text" maxlength="28" style="width: 97%;">
+                </td>
+
             </tr>
 
             <tr style="background-color: lightyellow;">
@@ -1061,6 +1121,10 @@
                 <td>
                     <output id="kepzettseg23fok"></output>
                 </td>
+                <td>
+                    <input type="text" maxlength="28" style="width: 97%;">
+                </td>
+
             </tr>
 
             <tr style="background-color: lightgrey;">
@@ -1071,6 +1135,10 @@
                 <td>
                     <output id="kepzettseg24fok"></output>
                 </td>
+                <td>
+                    <input type="text" maxlength="28" style="width: 97%;">
+                </td>
+
             </tr>
 
             <tr style="background-color: lightyellow;">
@@ -1082,7 +1150,7 @@
                     <output id="kepzettseg25fok"></output>
                 </td>
                 <td style="text-align: center; font-size: 12px; background-color: lightslategray;">
-                    <label for="">Szint:</label> <output id="szint"></output> <button onclick="szintplus()" style="border-width: 1px; border-radius: 3px;">+</button> <button onclick="szintminus()" style="border-width: 1px; border-radius: 3px;">-</button>
+                    <label for="">Szint:</label> <output type="number" id="szint" style="padding: 4px; background-color:blanchedalmond; font-size: 14px;">1</output> <button onclick="szintplus()" style="border-width: 1px; border-radius: 3px;">+</button> <button onclick="szintminus()" style="border-width: 1px; border-radius: 3px;">-</button>
                 </td>
             </tr>
 
