--- a/mgussegdlet/app/src/main/assets/index.html
+++ b/mgussegdlet/app/src/main/assets/index.html
@@ -1150,7 +1150,7 @@
                     <output id="kepzettseg25fok"></output>
                 </td>
                 <td style="text-align: center; font-size: 12px; background-color: lightslategray;">
-                    <label for="">Szint:</label> <output type="number" id="szint" style="padding: 4px; background-color:blanchedalmond; font-size: 14px;">1</output> <button onclick="szintplus()" style="border-width: 1px; border-radius: 3px;">+</button> <button onclick="szintminus()" style="border-width: 1px; border-radius: 3px;">-</button>
+                    <label for="">Szint:</label> <output type="number" id="szint" style="padding: 4px; background-color:blanchedalmond; font-size: 14px;">1</output> <button onclick="szintplus()" style="border-width: 1px; border-radius: 3px;">+</button>
                 </td>
             </tr>
 
