plusz képzettséglista OK

--- a/mgussegdlet/app/src/main/assets/index.html
+++ b/mgussegdlet/app/src/main/assets/index.html
@@ -1150,7 +1150,76 @@
                     <output id="kepzettseg25fok"></output>
                 </td>
                 <td style="text-align: center; font-size: 12px; background-color: lightslategray;">
-                    <label for="">Szint:</label> <output type="number" id="szint" style="padding: 4px; background-color:blanchedalmond; font-size: 14px;">1</output> <button onclick="szintplus()" style="border-width: 1px; border-radius: 3px;">+</button>
+                    <label for="">Plusz képzettségek választása: </label><select name="" id="" style="max-width: 35%; border-radius: 3px;"> <!-- plusz képzettségek választása !-->
+                        <option value="">Válassz</option>
+                        <option value="">Ökölharc</option>
+                        <option value="">Birkózás</option>
+                        <option value="">Fegyverhasználat</option>
+                        <option value="">Pajzshasználat</option>
+                        <option value="">Fegyverdobás</option>
+                        <option value="">Fegyvertörés</option>
+                        <option value="">Lefegyverzés</option>
+                        <option value="">Nehézvért viselet</option>
+                        <option value="">Kétkezes harc</option>
+                        <option value="">Vakharc</option>
+                        <option value="">Fegyverismeret</option>
+                        <option value="">Hadvezetés</option>
+                        <option value="">Írás-olvasás</option>
+                        <option value="">Nyelvtudás</option>
+                        <option value="">Ősi nyelv ismerete</option>
+                        <option value="">Időjóslás</option>
+                        <option value="">Térképészet</option>
+                        <option value="">Heraldika</option>
+                        <option value="">Legendaismeret</option>
+                        <option value="">Történelemismeret</option>
+                        <option value="">Vallásismeret</option>
+                        <option value="">Építészet</option>
+                        <option value="">Méregkeverés-semlegesítés</option>
+                        <option value="">Herbalizmus</option>
+                        <option value="">Sebgyógyítás</option>
+                        <option value="">Pszi</option>
+                        <option value="">Alkímia</option>
+                        <option value="">Élettan</option>
+                        <option value="">Mágia használat</option>
+                        <option value="">Demonológia</option>
+                        <option value="">Rúnamágia</option>
+                        <option value="">Drágakőmágia</option>
+                        <option value="">Idomítás</option>
+                        <option value="">Etikett</option>
+                        <option value="">Nyomolvasás-eltüntetés</option>
+                        <option value="">Erdőjárás</option>
+                        <option value="">Vadászat-halászat</option>
+                        <option value="">Lovaglás</option>
+                        <option value="">Kocsihajtás</option>
+                        <option value="">Úszás</option>
+                        <option value="">Szexuális kultúra</option>
+                        <option value="">Hajózás</option>
+                        <option value="">Éneklés-zenélés</option>
+                        <option value="">Tánc</option>
+                        <option value="">Hangutánzás</option>
+                        <option value="">Értékbecslés</option>
+                        <option value="">Csapdaállítás</option>
+                        <option value="">Csomózás</option>
+                        <option value="">Zsonglőrködés</option>
+                        <option value="">Futás</option>
+                        <option value="">Szakma</option>
+                        <option value="">Mászás</option>
+                        <option value="">Esés</option>
+                        <option value="">Ugrás</option>
+                        <option value="">Kocsmai verekedés</option>
+                        <option value="">Hátbaszúrás</option>
+                        <option value="">Hamiskártya</option>
+                        <option value="">Kötelékből szabadulás</option>
+                        <option value="">Álcázás-álruha</option>
+                        <option value="">Lopózás</option>
+                        <option value="">Rejtőzés</option>
+                        <option value="">Kötéltánc</option>
+                        <option value="">Zsebmetszés</option>
+                        <option value="">Csapdafelfedezés</option>
+                        <option value="">Zárnyitás</option>
+                        <option value="">Titkosajtó keresés</option>
+
+                    </select><label for="">Szint:</label> <output type="number" id="szint" style="padding: 4px; background-color:blanchedalmond; font-size: 14px;">1</output> <button onclick="szintplus()" style="border-width: 1px; border-radius: 3px;">+</button>
                 </td>
             </tr>
 
