--- a/mgussegdlet/app/src/main/assets/index2.html
+++ b/mgussegdlet/app/src/main/assets/index2.html
@@ -5,15 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style2.css">
+    <script src="jquery-3.6.0.min.js"></script>    
     <title>Magus</title>
 </head>
 <body>
     <table id="table1" width="100%">
         <tr>
             <td colspan="2">
-                <div id="divszalagcim" style="font-size: 12px; text-align: center;">
-                    <button onclick="location.href='index2.html';">Töredékek</button>
-                    <button onclick="location.href='index.html';">Karakterkészítő</button>
+                <div id="divszalagcim" style="font-size: 12px;">
+                    <button id="gomb" onclick="location.href='index2.html';">Töredékek</button>
+                    <button id="gomb" onclick="location.href='index.html';">Karakterkészítő</button>
                 </div>
             </td>
         </tr>
@@ -21,5 +22,7 @@
 
     <div class="circle"></div>
     <div class="circle2"></div>
+
+    <script src="script2.js"></script>
 </body>
 </html>
