--- a/mgussegdlet/app/src/main/assets/index2.html
+++ b/mgussegdlet/app/src/main/assets/index2.html
@@ -12,7 +12,7 @@
     <table id="table1" width="100%">
         <tr>
             <td colspan="2">
-                <div id="divszalagcim" style="font-size: 12px;">
+                <div id="gombok" style="font-size: 12px;">
                     <button id="gomb" onclick="location.href='index2.html';">Töredékek</button>
                     <button id="gomb" onclick="location.href='index.html';">Karakterkészítő</button>
                 </div>
@@ -20,8 +20,24 @@
         </tr>
     </table>
 
-    <div class="circle"></div>
-    <div class="circle2"></div>
+    <table id="table2">
+        <tr>
+            <td>
+                <button class="buttons" id="vilagbutton" onclick="vilag()">Világ</button>
+            </td>
+            <td>
+                <button class="buttons" id="kasztokbutton" onclick="vilag()">Kasztok</button>
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <button class="buttons" id="fajokbutton" onclick="fajok()">Fajok</button>
+            </td>
+            <td>
+                <button class="buttons" id="egyebbutton" onclick="egyeb()">Egyéb</button>
+            </td>
+        </tr>
+    </table>         
 
     <script src="script2.js"></script>
 </body>
