--- a/mgussegdlet/app/src/main/assets/index2.html
+++ b/mgussegdlet/app/src/main/assets/index2.html
@@ -1,44 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style2.css">
-    <script src="jquery-3.6.0.min.js"></script>    
+    <script src="jquery-3.6.0.min.js"></script>
     <title>Magus</title>
 </head>
+
 <body>
     <table id="table1" width="100%">
-        <tr>
-            <td colspan="2">
-                <div id="gombok" style="font-size: 12px;">
-                    <button id="gomb" onclick="location.href='index2.html';">Töredékek</button>
-                    <button id="gomb" onclick="location.href='index.html';">Karakterkészítő</button>
-                </div>
-            </td>
-        </tr>
-    </table>
+        <td colspan="2">
+            <div style="font-size: 12px;">
+                <button id="gomb" onclick="location.href='index.html';">Karakterkészítő</button>
+            </div>
 
-    <table id="table2">
-        <tr>
-            <td>
-                <button class="buttons" id="vilagbutton" onclick="vilag()">Világ</button>
-            </td>
-            <td>
-                <button class="buttons" id="kasztokbutton" onclick="vilag()">Kasztok</button>
-            </td>
-        </tr>
-        <tr>
-            <td>
-                <button class="buttons" id="fajokbutton" onclick="fajok()">Fajok</button>
-            </td>
-            <td>
-                <button class="buttons" id="egyebbutton" onclick="egyeb()">Egyéb</button>
-            </td>
-        </tr>
-    </table>         
+            <div style="font-size: 12px;">
+                <button class="buttons" id="vilagbutton" onclick="location.href='vilag.html';">Világ</button>
+
+            </div>
+
+            <div style="font-size: 12px;">
+                <button class="buttons" id="kasztokbutton" onclick="location.href='kasztok.html';">Kasztok</button>
+
+            </div>
+
+            <div style="font-size: 12px;">
+                <button class="buttons" id="fajokbutton" onclick="location.href='fajok.html';">Fajok</button>
+
+            </div>
+
+            <div style="font-size: 12px;">
+                <button class="buttons" id="egyebbutton" onclick="location.href='egyeb.html';">Egyéb</button>
+
+            </div>
+
+    </table>
 
     <script src="script2.js"></script>
 </body>
+
 </html>
