--- a/mgussegdlet/app/src/main/assets/vilag.html
+++ b/mgussegdlet/app/src/main/assets/vilag.html
@@ -1,18 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=100%, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="stylevilag.css">
 </head>
-<body>
-    A teremtett világ
-    <button id="gomb" onclick="location.href='index.html';">Karakterkészítő</button>
-    <button class="buttons" id="vilagbutton" onclick="location.href='vilag.html';">Világ</button>
-    <button class="buttons" id="kasztokbutton" onclick="location.href='kasztok.html';">Kasztok</button>
-    <button class="buttons" id="fajokbutton" onclick="location.href='fajok.html';">Fajok</button>
-    <button class="buttons" id="egyebbutton" onclick="location.href='egyeb.html';">Egyéb</button>
 
+<body>
+
+    <div id="buttonsdiv">
+        <table>
+            <tr>
+                <td>
+                    <button class="buttons" id="gomb" onclick="location.href='index.html';">Karakterkészítő</button>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <button class="buttons" id="vilagbutton" onclick="location.href='vilag.html';">Világ</button>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <button class="buttons" id="kasztokbutton" onclick="location.href='kasztok.html';">Kasztok</button>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <button class="buttons" id="fajokbutton" onclick="location.href='fajok.html';">Fajok</button>
+
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <button class="buttons" id="egyebbutton" onclick="location.href='egyeb.html';">Egyéb</button>
+                </td>
+            </tr>
+        </table>
+    </div>
+
+    <button class="mapbutton" id="sirenar" onclick="sirenar()"></button>
+
+    <img src="htmlmedia/ynev_poszter_lowres.jpg" alt="">
 </body>
+
+<script src="vilagscript.js"></script>
 </html>
